--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             padding: 15px 20px;
             border-radius: 10px;
             box-shadow: 7px 7px 12px grey;
-            background-image: linear-gradient(to right, #00FFFF, #0099CC );
+            background-image: linear-gradient(to bottom right, #00FFFF, #0099CC );
 
         }
     </style>
@@ -29,17 +29,17 @@
         .then(data=> showUserNames(data));
         
         function showUserNames(data){
-            let userLists=[];
+            let userLists = '';
             data.forEach(user => {                  
-                userLists = userLists + `<div class="user">
+                userLists = userLists + `<div class = "user">
                                             <h3> Name: ${user.name} </h3> 
-                                            <h5>Nick Name: ${user.username} </h5>
+                                            <h5> Nick Name: ${user.username} </h5>
                                             <p> Company Name: ${user.company.name} , Company BS Name: ${user.company.bs} 
                                         </div>`
                 
             });
             //console.log(lists);
-            const userContainer =document.getElementById("user-container").innerHTML=userLists;
+            const userContainer =document.getElementById ("user-container").innerHTML = userLists;
         }
     </script>
 </body>
